Use URI.create().toURL() in Snowflake
new URL() is deprecated.